fix: adjust mobile spacing

--- a/style.css
+++ b/style.css
@@ -90,21 +90,28 @@ body {
 }
 
 .card {
-  width: clamp(264px, 75%, 1110px);
-  height: 956px;
+  width: clamp(327px, 60%, 1110px);
+  height: 780px;
   border-radius: var(--border-radius);
   background-color: var(--clr-neutral-800);
 }
 
-h1,
-p,
-h3 {
+main {
+  margin-inline: 1.5em;
+}
+
+h1 {
   margin-top: var(--gap-med);
 }
 
-h3:last-of-type {
-  margin-bottom: var(--gap-med);
+p,
+h3 {
+  margin-top: var(--gap-sm);
 }
+
+/* h3:last-of-type {
+  margin-bottom: var(--gap-med);
+} */
 
 /* ---------- COMPONENTS ----------*/
 .hero-overlay {
